--- a/src/components/HeroInfoPage/FullImage/FullImage.module.css
+++ b/src/components/HeroInfoPage/FullImage/FullImage.module.css
@@ -1,4 +1,4 @@
-.fullImage{
+.fullImage {
     position: fixed;
     top: 0;
     left: 0;
@@ -8,10 +8,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0,0,0,.7);
-    }
-    .button{
-        position: absolute;
-        top: 88px;
-        left: 802px;
-    }
+    background: rgba(0, 0, 0, 0.7);
+}
