--- a/src/components/HeroInfoPage/HeaderInfo/HeaderInfo.module.css
+++ b/src/components/HeroInfoPage/HeaderInfo/HeaderInfo.module.css
@@ -1,3 +1,11 @@
-.headerInfo{
+.headerInfo {
     margin-bottom: 40px;
+    justify-content: space-between !important;
+}
+.link:hover {
+    text-decoration: none !important;
+    color: white;
+}
+.title{
+    font-size: 30px;
 }
