--- a/src/components/HomePage/MyTeam/MyTeam.module.css
+++ b/src/components/HomePage/MyTeam/MyTeam.module.css
@@ -1,11 +1,12 @@
-.btn {
-	display: none !important;
+.remove {
+	display: none;
 	position: absolute;
 	top: 1px;
 	left: 16px;
 	width: 50px;
 	height: 75px !important;
-	opacity: 0.8;
+	opacity: 0.7;
+	background-color: black;
 }
 
 .card{
@@ -13,10 +14,15 @@
 	border: 1px solid #797979;
 	margin-bottom: 10px
 }
-.card:hover button{
+.card:hover .remove{
 	display: block !important;
 }
 .name{
 	margin-left: 25px;
 	padding-top: 27px;
+	font-weight: 600;
+}
+.card:hover{
+	background-color: #797979;
+	color: #fff;
 }
