footer, xs version finished

--- a/src/components/HeroInfoPage/HeaderInfo/HeaderInfo.module.css
+++ b/src/components/HeroInfoPage/HeaderInfo/HeaderInfo.module.css
@@ -8,8 +8,8 @@
 }
 .title{
     font-size: 30px;
-    margin-left: 8% !important;
+    text-decoration-line: overline;
 }
-.link{
-    margin-right: 8% !important;
+.home{
+    text-decoration-line: overline;
 }
