--- a/src/components/HomePage/MyTeam/MyTeam.module.css
+++ b/src/components/HomePage/MyTeam/MyTeam.module.css
@@ -12,7 +12,7 @@
 .card{
 	display: flex;
 	border: 1px solid #797979;
-	margin-bottom: 10px
+	margin-bottom: 10px;
 }
 .card:hover .remove{
 	display: block !important;
@@ -25,4 +25,5 @@
 .card:hover{
 	background-color: #797979;
 	color: #fff;
+	box-shadow: 0 8px 16px 0 rgba(2,2,2,0.5);
 }
