--- a/src/components/HeroInfoPage/HeroInfo/HeroInfo.module.css
+++ b/src/components/HeroInfoPage/HeroInfo/HeroInfo.module.css
@@ -7,6 +7,10 @@
 .title {
     margin-bottom: 30px;
 }
+.padding{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
 @media only screen and (max-width: 780px) {
     .card {
         display: block;
