--- a/src/components/HeroInfoPage/Modal/Modal.module.css
+++ b/src/components/HeroInfoPage/Modal/Modal.module.css
@@ -10,3 +10,9 @@
 .img{
     margin-top: 30px;
 }
+@media only screen and (max-width: 576px) {
+    .content {
+      justify-content: center !important;
+    }
+  }
+
