--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,10 +1,15 @@
-.title{
-    text-align: center;
-    margin-bottom: 53px;
+.title {
+  text-align: center;
+  margin-bottom: 53px;
 }
-@media only screen and (max-width: 575px) {
-    .wrapper {
-      justify-content: center !important;
-    }
+@media only screen and (max-width: 576px) {
+  .content {
+    justify-content: center !important;
   }
+}
 
+@media only screen and (max-width: 576px) {
+  .title {
+    margin-top: 30px;
+  }
+}
