--- a/src/components/HeroInfoPage/HeroInfo/HeroInfo.module.css
+++ b/src/components/HeroInfoPage/HeroInfo/HeroInfo.module.css
@@ -3,6 +3,7 @@
 }
 .image {
     margin-right: 80px;
+    position: relative;
 }
 .title {
     margin-bottom: 30px;
@@ -10,6 +11,21 @@
 .padding{
     padding-right: 0px !important;
     padding-left: 0px !important;
+}
+.zoomIn{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 1px;
+    bottom: 0px;
+    height: 100%;
+    background-color: #151515;
+    opacity: 0.9;
+}
+.image:hover .zoomIn{
+    display: block !important;
+    cursor: pointer;
 }
 @media only screen and (max-width: 780px) {
     .card {
@@ -26,5 +42,6 @@
 @media only screen and (max-width: 780px) {
     .image {
         margin-right: 0px;
+        position: relative;
     }
 }
